# gatekeeper

./: .env.example  .gitignore  AGENTIC_ACCESS_PLAN.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  VISION.md  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docker-publish.yml  lint.yml  test.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_api_token_hash.py  003_add_admin_password_hash.py  004_add_setup_completed.py  005_notification_settings.py  006_add_validation_tables.py  007_add_plan_builder_session.py  008_multiple_trading_plans.py  009_add_ohlc_bars_table.py  009_add_plan_review_sample_size.py  010_add_plan_reviews_table.py  011_add_template_id_to_trading_plans.py  012_add_rules_modified_at_to_trading_plans.py
app/: auth.py  config.py  csrf.py  database.py  main.py
app/cli/: __init__.py  client.py  config.py  main.py
app/mcp/: __init__.py  resources.py  server.py  tools.py
app/models/: __init__.py  ai_analysis.py  enums.py  idea.py  idea_rule_check.py  instrument.py  journal.py  ohlc_bar.py  plan_builder_session.py  plan_review.py  plan_rule.py  settings.py  state_transition.py  trade.py  trading_plan.py
app/routers/: auth.py  dashboard.py  help.py  ideas.py  instruments.py  journal.py  plan.py  plan_builder.py  plan_review.py  reports.py  settings.py  setup.py  trades.py  validation.py
app/schemas/: ai.py  auth.py  base.py  checklist.py  ideas.py  instruments.py  journal.py  plan.py  plan_review.py  reports.py  (+2 more)
deploy/: README.md  docker-compose.yml  install.sh  nginx.conf
docs/: UX_SPEC.md
tests/: conftest.py  docker-compose.test.yml  factories.py  test_ai_factory.py  test_ai_service.py  test_auth.py  test_checklist_service.py  test_feature_engine.py  test_feedback_service.py  test_idea_service.py  test_instrument_service.py  test_journal_service.py  test_mcp_tools.py  test_multi_plan.py  test_notification_service.py  test_plan_compiler.py  test_plan_review_api.py  test_plan_review_service.py  test_plan_service.py  test_plan_templates.py  test_proxy_evaluator.py  test_replay_service.py  test_report_service.py  test_rule_interpreter.py  test_setup_wizard.py  test_state_machine.py  test_trade_service.py  test_validation_api.py
(+83 files in other folders)
